change styles for proj container and hover effects

--- a/projects.html
+++ b/projects.html
@@ -86,10 +86,12 @@
                 <!-- DreamOffer -->
                 <div class="project" id="dreamoffer" style="display: none;">
                     <div class="project__image">
-                        <img src="img/cs340_project_img3.png" alt="DreamOffer project img" class="project__img">
+                        <img src="img/cs340_project_img3.png" alt="DreamOffer project img" class="project__img" id="dreamOffer-img">
+                        <div class="dreamOffer-img"></div>
                     </div>
                     <div class="project__data">
-                        <h4 class="project--title">DreamOffer <a href="https://github.com/sophlil/DreamOffer"><img src="img/GitHub_mark.png" alt="Github logo"></a></h4>
+                        <!-- Link icon created by Kiranshastry Lineal - Flaticon -->
+                        <h4 class="project--title">DreamOffer <a href="https://github.com/sophlil/DreamOffer"><img src="img/GitHub_mark.png" alt="Github logo"></a><a href="https://dream-offer.herokuapp.com/"><img src="img/link.png" alt="Link img" class="project--link"></a></h4>
                         <div class="project--stack">
                             <span class="project--stack-item">HTML</span> |
                             <span class="project--stack-item">CSS</span> |
@@ -98,14 +100,14 @@
                             <span class="project--stack-item">Flask</span> |
                             <span class="project--stack-item">MySQL</span>
                         </div>
-                        <p class="project--text">DreamOffer is a Job Application Tracking database driven web application that helps applicants keep track of where they have applied and when their applications were submitted in an organized and simple to use system. <a href="https://dream-offer.herokuapp.com/" class="project--link">Learn more</a></p>
+                        <p class="project--text">DreamOffer is a Job Application Tracking database driven web application that helps applicants keep track of where they have applied and when their applications were submitted in an organized and simple to use system.</p>
                     </div>
                 </div>
 
                 <!-- Exercise Log -->
                 <div class="project" id="exerciselog" style="display: none;">
                     <div class="project__image">
-                        <img src="img/battleship.png" alt="Battleship project img" class="project__img">
+                        <img src="img/battleship.png" alt="Battleship project img" class="project__img" id="exerciseLog">
                     </div>
                     <div class="project__data">
                         <h4 class="project--title">Exercise Log <a href="#"><img src="img/GitHub_mark.png" alt="Github logo"></a></h4>
@@ -118,21 +120,21 @@
                             <span class="project--stack-item">Express.js</span> |
                             <span class="project--stack-item">MongoDB</span>
                         </div>
-                        <p class="project--text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto perferendis nostrum recusandae, neque adipisci iure earum deleniti provident ducimus unde. Lorem ipsum dolor sit amet, consectetur adipisicing elit. <a href="#" class="project--link">Learn more</a></p>
+                        <p class="project--text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto perferendis nostrum recusandae, neque adipisci iure earum deleniti provident ducimus unde. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                     </div>
                 </div>
 
                 <!-- Battleship -->
                 <div class="project" id="battleship" style="display: none;">
                     <div class="project__image">
-                        <img src="img/battleship.png" alt="Battleship project img" class="project__img">
+                        <img src="img/battleship.png" alt="Battleship project img" class="project__img" id="battleship">
                     </div>
                     <div class="project__data">
                         <h4 class="project--title">Battleship <a href="https://github.com/dreniff3/python-battleship-with-gui"><img src="img/GitHub_mark.png" alt="Github logo"></a></h4>
                         <div class="project--stack">
                             <span class="project--stack-item">Python</span>
                         </div>
-                        <p class="project--text">A Python program that allows two people to play the game Battleship, originally created as a school project, meant to be played in the terminal. During a break between quarters, I implemented a simple GUI for the game using Tkinter. <a href="#" class="project--link">Learn more</a></p>
+                        <p class="project--text">A Python program that allows two people to play the game Battleship, originally created as a school project, meant to be played in the terminal. During a break between quarters, I implemented a simple GUI for the game using Tkinter.</p>
                     </div>
                 </div>
 
