add attribution comment for mail icon

--- a/index.html
+++ b/index.html
@@ -350,6 +350,7 @@
 
         <!-- CONTACT -->
         <section class="contact" id="contact" style="display: none;">
+            <!-- Mail icon created by Those Icons - Flaticon -->
             <a href="mailto:donaldreniff@gmail.com"><img src="img/envelope.png" alt="Mail icon"></a>
         </section>
 
