fix light-mode about image display

--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
         <section class="about" id="about" style="display: none;">
 
             <div class="about__img">
-                <img src="img/about-dark.png" alt="Me" id="dark-image">
-                <img src="img/about-light.png" alt="Me" id="light-image" style="display: none;">
+                <img src="img/about-dark.png" alt="Me" id="dark-image2">
+                <img src="img/about-light.png" alt="Me" id="light-image2" style="display: none;">
             </div>
 
             <form action="#" class="about__form">
