delete unused markup

--- a/index.html
+++ b/index.html
@@ -50,26 +50,6 @@
 
         </div>
 
-        <!-- <nav class="navbar">
-            <ul class="navbar__menu">
-                <li class="navbar__menu-item">
-                    <a href="#home" class="navbar__menu-link active">Home</a>
-                </li>
-                <li class="navbar__menu-item">
-                    <a href="#about" class="navbar__menu-link">About</a>
-                </li>
-                <li class="navbar__menu-item">
-                    <a href="#skills" class="navbar__menu-link">Skills</a>
-                </li>
-                <li class="navbar__menu-item">
-                    <a href="#projects" class="navbar__menu-link">Projects</a>
-                </li>
-                <li class="navbar__menu-item">
-                    <a href="#contact" class="navbar__menu-link">Contact</a>
-                </li>
-            </ul>
-        </nav> -->
-
         <div class="header__logo">
             <img src="img/signature.png" alt="My signature">
         </div>
@@ -88,12 +68,6 @@
         <!-- HOME -->
         <section class="home" id="home">
 
-            <!-- <div class="home__img">
-                <img src="img/self-dark-mode.png" alt="My picture" id="dark-image">
-                <img src="img/self-light-mode.png" alt="My picture" id="light-image" style="display: none;">
-
-            </div> -->
-
             <div class="home__data">
                 <div class="home__data--img">
                     <img src="img/self-dark-mode.png" alt="My picture" id="dark-image">
@@ -105,17 +79,6 @@
                         I'm Don Reniff
                     </h1>
                 </div>
-
-                <!-- <p class="glitch">
-                    <span aria-hidden="true">Hello World, I'm Don</span>
-                    Hello World, I'm Don
-                    <span aria-hidden="true">Hello World, I'm Don</span>
-                </p>
-
-                <div class="typewriter">
-                    <div class="text"></div>
-                    <div class="cursor"></div>
-                </div> -->
 
                 <div class="home__data--social">
                     <a href="https://github.com/dreniff3">
@@ -254,16 +217,6 @@
                         <textarea name="details" id="details" cols="20" rows="4" readonly>My name is Don Reniff. I'm currently a student enrolled in Oregon State University's online post-baccalaureate program. I am passionate about learning, and I aspire to become a full-stack Web Developer.</textarea>
                     </div>
 
-                    <!-- <div class="about--wrapper">
-                        <label for="actions">Actions: </label>
-                        <textarea name="actions" id="actions" cols="20" rows="4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero omnis eveniet sunt alias perferendis minima facere nisi quisquam a illum, tenetur unde vitae dolor optio, repellat explicabo facilis ad ipsum.</textarea>
-                    </div>
-
-                    <div class="about--wrapper">
-                        <label for="inventory">Inventory: </label>
-                        <textarea name="inventory" id="inventory" cols="20" rows="4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam facilis ipsa sit adipisci at, placeat est laborum expedita, illo molestias ipsam sint doloribus ad!</textarea>
-                    </div> -->
-
                 </fieldset>
 
             </form>
@@ -354,126 +307,7 @@
             <a href="mailto:donaldreniff@gmail.com"><img src="img/envelope.png" alt="Mail icon"></a>
         </section>
 
-        <!-- <section class="about reveal" id="about">
-            <h2 class="section-title">About</h2>
-            <div class="about__container">
-                <img src="img/self-3.JPG" alt="My other picture">
-                <p class="body-text">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit, accusamus, ad necessitatibus impedit quaerat vitae placeat earum dignissimos eum laborum, quo consequatur. Fuga architecto laudantium exercitationem ad quibusdam perferendis voluptatem?
-                </p>
-            </div>
-        </section> -->
-
-        <!-- SKILLS -->
-        <!-- <section class="skills reveal" id="skills">
-            <h2 class="section-title">Skills</h2>
-            <div class="skills__container">
-
-                <div class="skills__col skills__col-1">
-                    <div class="skills__item">
-                        <img src="img/python-logo.png" alt="Python logo">
-                        <h3 class="item-title">Python</h3>
-                    </div>
-                    <div class="skills__item">
-                        <img src="img/c-logo.png" alt="C logo">
-                        <h3 class="item-title">C</h3>
-                    </div>
-                    <div class="skills__item">
-                        <img src="img/git-logo.png" alt="Git logo">
-                        <h3 class="item-title">Git</h3>
-                    </div>
-                    <div class="skills__item">
-                        <img src="img/flask-logo.png" alt="Flask logo">
-                        <h3 class="item-title">Flask</h3>
-                    </div>
-                </div>
-
-                <div class="skills__col skills__col-2">
-                    <div class="skills__item">
-                        <img src="img/javascript-logo.png" alt="JavaScript logo">
-                        <h3 class="item-title">JavaScript</h3>
-                    </div>
-                    <div class="skills__item">
-                        <img src="img/react-logo.png" alt="React logo">
-                        <h3 class="item-title">React</h3>
-                    </div>
-                    <div class="skills__item">
-                        <img src="img/node-logo.png" alt="Node.js logo">
-                        <h3 class="item-title">Node.JS</h3>
-                    </div>
-                    <div class="skills__item">
-                        <img src="img/express-logo.png" alt="Express logo">
-                        <h3 class="item-title">Express.JS</h3>
-                    </div>
-                </div>
-
-                <div class="skills__col skills__col-3">
-                    <div class="skills__item">
-                        <img src="img/html-logo.png" alt="HTML logo">
-                        <h3 class="item-title">HTML</h3>
-                    </div>
-                    <div class="skills__item">
-                        <img src="img/css-logo.png" alt="CSS logo">
-                        <h3 class="item-title">CSS</h3>
-                    </div>
-                    <div class="skills__item">
-                        <img src="img/sass-logo.png" alt="Sass logo">
-                        <h3 class="item-title">Sass</h3>
-                    </div>
-                    <div class="skills__item">
-                        <img src="img/mongo-logo.png" alt="MongoDB logo">
-                        <h3 class="item-title">MongoDB</h3>
-                    </div>
-                </div>
-
-            </div>
-        </section> -->
-
-        <!-- PROJECTS -->
-        <!-- <div class="projects reveal" id="projects">
-            <h2 class="section-title">Projects</h2>
-
-            <div class="projects__container">
-
-                <div class="project">
-                    <div class="project__data">
-                        <h4 class="project-title">Battleship <a href="https://github.com/dreniff3/python-battleship-with-gui"><img src="img/GitHub_mark.png" alt="Github logo"></a></h4>
-                        <div class="project-stack">
-                            <span class="project-stack__item">Python</span>
-                        </div>
-                        <p class="project-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto perferendis nostrum recusandae, neque adipisci iure earum deleniti provident ducimus unde. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro, rem. Reprehenderit cum at illo, tempore, voluptatibus veniam unde dolores ratione cupiditate impedit et explicabo rem quis minus animi in. Similique!</p>
-                        <a href="#" class="project__link">Learn more</a>
-                    </div>
-
-                    <div class="project__image">
-                        <img src="img/battleship.png" alt="Battleship project img" class="project__img">
-                    </div>
-                </div>
-
-                <div class="project">
-                    <div class="project__data">
-                        <h4 class="project-title">Battleship <a href="https://github.com/dreniff3/python-battleship-with-gui"><img src="img/GitHub_mark.png" alt="Github logo"></a></h4>
-                        <div class="project-stack">
-                            <span class="project-stack__item">HTML</span>
-                            <span class="project-stack__item">Sass</span>
-                            <span class="project-stack__item">JavaScript</span>
-                            <span class="project-stack__item">React</span>
-                            <span class="project-stack__item">Express.js</span>
-                            <span class="project-stack__item">MongoDB</span>
-                        </div>
-                        <p class="project-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto perferendis nostrum recusandae, neque adipisci iure earum deleniti provident ducimus unde. Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam minus quo qui velit ab. Qui blanditiis quasi, odit nostrum distinctio, vitae modi, eius perspiciatis quam atque exercitationem. Consectetur, accusantium suscipit?</p>
-                        <a href="#" class="project__link">Learn more</a>
-                    </div>
-
-                    <div class="project__image">
-                        <img src="img/battleship.png" alt="Project image 1" class="project__img">
-                    </div>
-                </div>
-
-            </div>
-        </div>
-
-    </main> -->
+    </main>
 
     <footer class="footer" id="footer">
         <p>&copy; Donald Reniff 2022</p>
