change link to dreamoffer repo

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                     </div>
                     <div class="project__data">
                         <!-- Link icon created by Kiranshastry Lineal - Flaticon -->
-                        <h4 class="project--title">DreamOffer <a href="https://github.com/sophlil/DreamOffer"><img src="img/GitHub_mark.png" alt="Github logo"></a><a href="https://dream-offer.herokuapp.com/"><img src="img/link.png" alt="Link img" class="project--link"></a></h4>
+                        <h4 class="project--title">DreamOffer <a href="https://github.com/dreniff3/DreamOffer"><img src="img/GitHub_mark.png" alt="Github logo"></a><a href="https://dream-offer.herokuapp.com/"><img src="img/link.png" alt="Link img" class="project--link"></a></h4>
                         <div class="project--stack">
                             <span class="project--stack-item">HTML</span> |
                             <span class="project--stack-item">CSS</span> |
