edit attribution for swords icon on form

--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
                     <legend>Domains & Developers</legend>
 
                     <div class="sub-wrapper">
-                        <!-- Reading eyeglasses icon created by Freepik - Flaticon -->
+                        <!-- Swords icon created by Freepik - Flaticon -->
                         <img src="img/sword.png" alt="sword">
                         <h3>Character Sheet</h3>
-                        <!-- Reading eyeglasses icon created by Freepik - Flaticon -->
+                        <!-- Swords icon created by Freepik - Flaticon -->
                         <img src="img/sword.png" alt="sword">
                     </div>
 
