edit projects images ids to be more accurate

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                 <!-- Exercise Log -->
                 <div class="project" id="exerciselog" style="display: none;">
                     <div class="project__image">
-                        <img src="img/battleship.png" alt="Battleship project img" class="project__img" id="exerciseLog">
+                        <img src="img/battleship.png" alt="Battleship project img" class="project__img" id="exerciseLog-img">
                     </div>
                     <div class="project__data">
                         <h4 class="project--title">Exercise Log <a href="#"><img src="img/GitHub_mark.png" alt="Github logo"></a></h4>
@@ -286,7 +286,7 @@
                 <!-- Battleship -->
                 <div class="project" id="battleship" style="display: none;">
                     <div class="project__image">
-                        <img src="img/battleship.png" alt="Battleship project img" class="project__img" id="battleship">
+                        <img src="img/battleship.png" alt="Battleship project img" class="project__img" id="battleship-img">
                     </div>
                     <div class="project__data">
                         <h4 class="project--title">Battleship <a href="https://github.com/dreniff3/python-battleship-with-gui"><img src="img/GitHub_mark.png" alt="Github logo"></a></h4>
