add image for workout log project

--- a/index.html
+++ b/index.html
@@ -266,10 +266,10 @@
                 <!-- Exercise Log -->
                 <div class="project" id="exerciselog" style="display: none;">
                     <div class="project__image">
-                        <img src="img/battleship.png" alt="Battleship project img" class="project__img" id="exerciseLog-img">
+                        <img src="img/workoutlog_img.png" alt="Workout Log project img" class="project__img" id="exerciseLog-img">
                     </div>
                     <div class="project__data">
-                        <h4 class="project--title">Exercise Log <a href="#"><img src="img/GitHub_mark.png" alt="Github logo"></a></h4>
+                        <h4 class="project--title">Workout Log <a href="#"><img src="img/GitHub_mark.png" alt="Github logo"></a></h4>
                         <div class="project--stack">
                             <span class="project--stack-item">HTML</span> |
                             <span class="project--stack-item">CSS</span> |
@@ -279,7 +279,7 @@
                             <span class="project--stack-item">Express.js</span> |
                             <span class="project--stack-item">MongoDB</span>
                         </div>
-                        <p class="project--text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Architecto perferendis nostrum recusandae, neque adipisci iure earum deleniti provident ducimus unde. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                        <p class="project--text">Exercises App with frontend and backend Full Stack MERN.</p>
                     </div>
                 </div>
 
