add link to workout log github repo

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                         <a href="#" onclick="showProject('dreamoffer')">DreamOffer</a>
                     </li>
                     <li class="projects__nav--item">
-                        <a href="#" onclick="showProject('exerciselog')">Exercise Log</a>
+                        <a href="#" onclick="showProject('exerciselog')">Workout Log</a>
                     </li>
                     <li class="projects__nav--item">
                         <a href="#" onclick="showProject('battleship')">Python Battleship</a>
@@ -269,7 +269,7 @@
                         <img src="img/workoutlog_img.png" alt="Workout Log project img" class="project__img" id="exerciseLog-img">
                     </div>
                     <div class="project__data">
-                        <h4 class="project--title">Workout Log <a href="#"><img src="img/GitHub_mark.png" alt="Github logo"></a></h4>
+                        <h4 class="project--title">Workout Log <a href="https://github.com/dreniff3/Workout-Log"><img src="img/GitHub_mark.png" alt="Github logo"></a></h4>
                         <div class="project--stack">
                             <span class="project--stack-item">HTML</span> |
                             <span class="project--stack-item">CSS</span> |
