change workout log app description

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                             <span class="project--stack-item">Express.js</span> |
                             <span class="project--stack-item">MongoDB</span>
                         </div>
-                        <p class="project--text">Exercises App with frontend and backend Full Stack MERN.</p>
+                        <p class="project--text">A Full Stack MERN app that tracks exercises completed by the user.</p>
                     </div>
                 </div>
 
