Change title and icon

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <!-- Code icons created by Icongeek26 - Flaticon -->
+    <link rel="shortcut icon" type="image/png" href="src/images/web-programming.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Don Reniff &mdash; Full Stack Web Developer</title>
   </head>
   <body>
     <div id="root"></div>
